Jenkins/Pipeline/k8s-webapp/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: HKwebapp-ing
  namespace: hkanonik
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hkanonik-app.k8s.playpit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: HKwebapp-svc
          servicePort: HKwebapp-svc-port
